--- a/web/edit-channel.html
+++ b/web/edit-channel.html
@@ -761,7 +761,7 @@
                               </select>
                             </div>
                             <div>
-                              <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">GPU Directory</label>
+                              <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">GPU Node Path</label>
                               <input type="text" x-model="urlEntry.custom.metarr_gpu_node" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600 dark:text-white/90" />
                             </div>
                             <div>
@@ -1241,7 +1241,7 @@
 
                       <div>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
-                          GPU Directory
+                          GPU Node Path
                         </label>
                         <input
                           type="text"
