--- a/web/add-channel.html
+++ b/web/add-channel.html
@@ -752,9 +752,9 @@
                               <select x-model="urlEntry.custom.metarr_gpu" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600 dark:text-white/90">
                                 <option value="">Use global</option>
                                 <option value="auto">Auto</option>
-                                <option value="nvidia">NVIDIA</option>
+                                <option value="cuda">NVIDIA</option>
                                 <option value="amd">AMD</option>
-                                <option value="intel">Intel</option>
+                                <option value="qsv">Intel</option>
                                 <option value="vaapi">VAAPI</option>
                               </select>
                             </div>
@@ -1230,9 +1230,9 @@
                         >
                           <option value="">None</option>
                           <option value="auto">Auto</option>
-                          <option value="nvidia">NVIDIA</option>
+                          <option value="cuda">NVIDIA</option>
                           <option value="amd">AMD</option>
-                          <option value="intel">Intel</option>
+                          <option value="qsv">Intel</option>
                           <option value="vaapi">VAAPI</option>
                         </select>
                       </div>
