Can clear CRF value field, updated HTML frontend to display all fields for custom channel settings.

--- a/web/edit-channel.html
+++ b/web/edit-channel.html
@@ -754,7 +754,7 @@
                               <select x-model="urlEntry.custom.metarr_gpu" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600 dark:text-white/90">
                                 <option value="">Use global</option>
                                 <option value="auto">Auto</option>
-                                <option value="cuda">NVIDIA</option>
+                                <option value="cuda">Nvidia</option>
                                 <option value="amd">AMD</option>
                                 <option value="qsv">Intel</option>
                                 <option value="vaapi">VAAPI</option>
@@ -1232,7 +1232,7 @@
                         >
                           <option value="">None</option>
                           <option value="auto">Auto</option>
-                          <option value="cuda">NVIDIA</option>
+                          <option value="cuda">Nvidia</option>
                           <option value="amd">AMD</option>
                           <option value="qsv">Intel</option>
                           <option value="vaapi">VAAPI</option>
