Can clear CRF value field, updated HTML frontend to display all fields for custom channel settings.

--- a/web/add-channel.html
+++ b/web/add-channel.html
@@ -624,15 +624,15 @@
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Max Concurrency</label>
-                              <input type="number" x-model.number="urlEntry.custom.max_concurrency" placeholder="Global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
+                              <input type="number" x-model.number="urlEntry.custom.max_concurrency" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Crawl Frequency (min)</label>
-                              <input type="number" x-model.number="urlEntry.custom.crawl_freq" placeholder="Global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
+                              <input type="number" x-model.number="urlEntry.custom.crawl_freq" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Download Retries</label>
-                              <input type="number" x-model.number="urlEntry.custom.download_retries" placeholder="Global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
+                              <input type="number" x-model.number="urlEntry.custom.download_retries" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Max Filesize</label>
@@ -737,11 +737,11 @@
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Concurrency</label>
-                              <input type="number" x-model.number="urlEntry.custom.metarr_concurrency" placeholder="Global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
+                              <input type="number" x-model.number="urlEntry.custom.metarr_concurrency" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Max CPU Usage (%)</label>
-                              <input type="number" x-model.number="urlEntry.custom.metarr_max_cpu_usage" placeholder="Global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
+                              <input type="number" x-model.number="urlEntry.custom.metarr_max_cpu_usage" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Min Free Memory</label>
@@ -784,7 +784,7 @@
                             </div>
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Transcode Quality (CRF)</label>
-                              <input type="number" x-model.number="urlEntry.custom.metarr_transcode_quality" placeholder="Global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
+                              <input type="number" x-model.number="urlEntry.custom.metarr_transcode_quality" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600" />
                             </div>
                             <div class="col-span-2">
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Transcode Video Filter</label>
@@ -1153,7 +1153,7 @@
                             x-model="formData.settings.use_global_cookies"
                             class="mr-2 rounded border-gray-300 text-brand-500 focus:ring-brand-500"
                           />
-                          <span class="text-sm text-gray-700 dark:text-gray-300">Use Global Cookies (find cookies from all browsers)</span>
+                          <span class="text-sm text-gray-700 dark:text-gray-300">Use Use global Cookies (find cookies from all browsers)</span>
                         </label>
                       </div>
                     </div>
