--- a/web/list-channels.html
+++ b/web/list-channels.html
@@ -559,7 +559,7 @@
                               <span class="ml-2 text-gray-900 dark:text-white" x-text="channel.settings?.cookies_from_browser || 'Not set'"></span>
                             </div>
                             <div>
-                              <span class="text-gray-500 dark:text-gray-400">Use Global Cookies:</span>
+                              <span class="text-gray-500 dark:text-gray-400">Use Use global Cookies:</span>
                               <span class="ml-2 text-gray-900 dark:text-white" x-text="channel.settings?.use_global_cookies ? 'Yes' : 'No'"></span>
                             </div>
                             <div>
