--- a/web/active-downloads.html
+++ b/web/active-downloads.html
@@ -290,6 +290,36 @@
                 </li>
                 <!-- Menu Item Channels -->
 
+                <!-- Menu Item Blocked Domains -->
+                <li>
+                  <a
+                    href="blocked-domains.html"
+                    @click="selected = 'Blocked Domains'"
+                    class="menu-item group"
+                    :class="(selected === 'Blocked Domains') || (page === 'blockedDomains') ? 'menu-item-active' : 'menu-item-inactive'"
+                  >
+                    <svg
+                      :class="(selected === 'Blocked Domains') || (page === 'blockedDomains') ? 'menu-item-icon-active'  :'menu-item-icon-inactive'"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <circle cx="12" cy="12" r="9" stroke="currentColor" stroke-width="1.5" fill="none"/>
+                      <line x1="5.63604" y1="5.63604" x2="18.364" y2="18.364" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                    </svg>
+
+                    <span
+                      class="menu-item-text"
+                      :class="sidebarToggle ? 'xl:hidden' : ''"
+                    >
+                      Blocked Domains
+                    </span>
+                  </a>
+                </li>
+                <!-- Menu Item Blocked Domains -->
+
                 <!-- Menu Item Logs -->
                 <li>
                   <a
