--- a/web/edit-channel.html
+++ b/web/edit-channel.html
@@ -790,6 +790,10 @@
                               </select>
                             </div>
                             <div>
+                              <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">GPU Node Path</label>
+                              <input type="text" x-model="urlEntry.custom.metarr_transcode_gpu_node" placeholder="Use global" class="w-full h-8 rounded border px-2 text-xs dark:bg-gray-900 dark:border-gray-600 dark:text-white/90" />
+                            </div>
+                            <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Video Transcode Codecs</label>
                               <textarea
                                 x-model="urlEntry.custom.metarr_transcode_video_transcode_codecs"
@@ -1265,6 +1269,18 @@
 
                       <div>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
+                          GPU Node Path
+                        </label>
+                        <input
+                          type="text"
+                          x-model="formData.metarr.metarr_transcode_gpu_node"
+                          placeholder="/dev/dri/renderD128"
+                          class="w-full h-11 rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
+                        />
+                      </div>
+
+                      <div>
+                        <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
                           Video Transcode Codecs
                         </label>
                         <textarea
@@ -1580,6 +1596,7 @@
               metarr_max_cpu_usage: '',
               metarr_min_free_mem: '',
               metarr_gpu: '',
+              metarr_transcode_gpu_node: '',
               metarr_transcode_video_transcode_codecs: '',
               metarr_transcode_audio_codecs: '',
               metarr_transcode_quality: '',
@@ -1771,6 +1788,7 @@
               metarr_max_cpu_usage: null,
               metarr_min_free_mem: '',
               metarr_gpu: '',
+              metarr_transcode_gpu_node: '',
               metarr_transcode_video_transcode_codecs: '',
               metarr_transcode_audio_codecs: '',
               metarr_transcode_quality: null,
@@ -1966,7 +1984,7 @@
                 const metarrFields = [
                   'metarr_output_directory', 'metarr_output_ext', 'metarr_rename_style',
                   'metarr_concurrency', 'metarr_max_cpu_usage', 'metarr_min_free_mem',
-                  'metarr_gpu', 'metarr_transcode_video_transcode_codecs', 'metarr_transcode_audio_codecs',
+                  'metarr_gpu', 'metarr_transcode_gpu_node', 'metarr_transcode_video_transcode_codecs', 'metarr_transcode_audio_codecs',
                   'metarr_transcode_quality', 'metarr_transcode_video_filter',
                   'metarr_extra_ffmpeg_args', 'metarr_meta_ops', 'metarr_meta_ops_file',
                   'metarr_filename_ops', 'metarr_filename_ops_file',
