Web frontend changes. Blocked domains page alterations.

--- a/web/add-channel.html
+++ b/web/add-channel.html
@@ -415,7 +415,7 @@
 
               <div class="hidden xl:block">
                 <h2 class="text-xl font-semibold text-gray-800 dark:text-white/90">
-                  Add Channel
+                  Tubarr
                 </h2>
               </div>
             </div>
@@ -435,34 +435,11 @@
         <!-- ===== Main Content Start ===== -->
         <main>
           <div class="p-4 mx-auto max-w-(--breakpoint-2xl) md:p-6">
-            <!-- Breadcrumb Start -->
-            <div x-data="{ pageName: `Add Channel`}">
-              <div class="flex flex-wrap items-center justify-between gap-3 pb-6">
-                <h2
-                  class="text-xl font-semibold text-gray-800 dark:text-white/90"
-                  x-text="pageName"
-                ></h2>
-                <nav>
-                  <ol class="flex items-center gap-1.5">
-                    <li>
-                      <a
-                        class="inline-flex items-center gap-1.5 text-sm text-gray-500 dark:text-gray-400"
-                        href="index.html"
-                      >
-                        Home
-                      </a>
-                    </li>
-                    <li>
-                      <span class="text-sm text-gray-500 dark:text-gray-400">/</span>
-                    </li>
-                    <li>
-                      <span class="text-sm text-gray-500 dark:text-gray-400">Add Channel</span>
-                    </li>
-                  </ol>
-                </nav>
-              </div>
+            <div class="mb-6">
+              <h2 class="text-title-md2 font-bold text-gray-900 dark:text-white">
+                Add Channel
+              </h2>
             </div>
-            <!-- Breadcrumb End -->
 
             <!-- Form Start -->
             <div
