--- a/web/index.html
+++ b/web/index.html
@@ -559,28 +559,11 @@
         <!-- ===== Main Content Start ===== -->
         <main>
           <div class="p-4 mx-auto max-w-(--breakpoint-2xl) md:p-6">
-            <!-- Breadcrumb Start -->
-            <div x-data="{ pageName: `Home`}">
-              <div class="flex flex-wrap items-center justify-between gap-3 pb-6">
-                <h2
-                  class="text-xl font-semibold text-gray-800 dark:text-white/90"
-                  x-text="pageName"
-                ></h2>
-                <nav>
-                  <ol class="flex items-center gap-1.5">
-                    <li>
-                      <a
-                        class="inline-flex items-center gap-1.5 text-sm text-gray-500 dark:text-gray-400"
-                        href="index.html"
-                      >
-                        Home
-                      </a>
-                    </li>
-                  </ol>
-                </nav>
-              </div>
+            <div class="mb-6">
+              <h2 class="text-title-md2 font-bold text-gray-900 dark:text-white">
+                Home
+              </h2>
             </div>
-            <!-- Breadcrumb End -->
 
             <!-- Channels Container -->
             <div
