--- a/web/list-channels.html
+++ b/web/list-channels.html
@@ -440,6 +440,12 @@
         <!-- ===== Main Content Start ===== -->
         <main class="h-full">
           <div class="mx-auto max-w-screen-2xl p-4 md:p-6 2xl:p-10">
+            <div class="mb-6">
+              <h2 class="text-title-md2 font-bold text-gray-900 dark:text-white">
+                List Channels
+              </h2>
+            </div>
+
             <!-- Channels List Start -->
             <div x-data="channelsList()" x-init="loadChannels()">
               <!-- Loading State -->
