--- a/web/logs.html
+++ b/web/logs.html
@@ -420,7 +420,7 @@
 
               <div class="hidden xl:block">
                 <h2 class="text-xl font-semibold text-gray-800 dark:text-white/90">
-                  Logs
+                  Tubarr
                 </h2>
               </div>
             </div>
@@ -440,6 +440,12 @@
         <!-- ===== Main Content Start ===== -->
         <main class="p-4 md:p-6 2xl:p-10">
           <div class="mx-auto max-w-7xl">
+            <div class="mb-6">
+              <h2 class="text-title-md2 font-bold text-gray-900 dark:text-white">
+                Logs
+              </h2>
+            </div>
+
             <!-- Log Viewer Start -->
             <div
               x-data="logViewer()"
